tests/NormalTests/paczka1/small_fuzzy/96547121.err
Error in line 1: UOoHlLbyPl S968 69,3
Error in line 3: UOoHlLbyPl S431 2,2
Error in line 5: A152 S968 30,1
Error in line 15: A152 S431 79,9
